--- a/NsoWebUI/WebContent/resources/static/css/style.css
+++ b/NsoWebUI/WebContent/resources/static/css/style.css
@@ -10,12 +10,24 @@ body.login{background: #fff url("../img/login-bg.jpg") no-repeat left top; backg
 h2{color:#2B3B52;font-size:20px; text-transform: capitalize;width:100%;float:left; margin:40px 0 43px 0;}
 .user{text-transform: uppercase;color:#7D7D7D; border:none; background:none; border-bottom: 1px solid #A4A4A6;
  padding: 6px;width:80%;float:left; margin-bottom: 30px; }
+ 
+ /* .error{text-transform: uppercase;color:#7D7D7D; border:none; background:none;
+ padding: 6px;width:80%;float:left; margin-bottom: 30px; } */
+ 
+ 
  .right-form a{color:#0B8CCF;font-size:18px;width:100%;float:left;}
+ 
  .login-btn{width:83%;float:left; margin-top: 20px;border:1px solid #55940A;color:#fff;font-size:18px; padding: 10px 0; text-align: center;
-background: #6dd908; /* Old browsers */
+ 
+ background: #6dd908; /* Old browsers */
 background: -moz-linear-gradient(top, #6dd908 0%, #82da10 47%, #93db17 100%); /* FF3.6-15 */
 background: -webkit-linear-gradient(top, #6dd908 0%,#82da10 47%,#93db17 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom, #6dd908 0%,#82da10 47%,#93db17 100%); }
+ 
+ 
+ .error-msg{width:83%;float:left; margin-top: 20px;color:red;font-size:18px; padding: 10px 0; text-align: center;
+ 
+
 
 
 
